# MakeItHappenOTT

./: .gitignore  ARTWORK_GUIDE.md  CMakeLists.txt  GITHUB_SETUP.md  README.md  WINDOWS_BUILD.md
.github/workflows/: build.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
